# infotainer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
app/: Cargo.toml
app/proto/: topic.proto
chronicle/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
chronicle/src/: main.rs
docs/: LICENSE-APACHE  LICENSE-MIT
docs/adr/: 0001-record-architecture-decisions.md  0002-use-grpc-to-build-interface.md  0003-use-protobuf-in-messaging-layer.md
editorial/: Cargo.toml  LICENSE-APACHE
editorial/src/: main.rs
examples/: client.rs  server.rs
examples/javascript/: server.rs
examples/javascript/static/: index.html  infotainer.js
infotainer-common/: Cargo.toml  build.rs
infotainer-common/src/: infotainer.rs  lib.rs
proto/: infotainer.proto  topic.proto
src/: client.rs  client_session.rs  data_log.rs  errors.rs  lib.rs  main.rs  messages.rs  protocol.rs  pubsub.rs  server.rs  session.rs  sessions.rs  subscription.rs  subscriptions.rs  websocket.rs
static/: index.html  infotainer.css  infotainer.js
tabloid/: Cargo.toml
tabloid/src/: main.rs
