[package]
name = "infotainer"
version = "0.1.0"
authors = ["joppich <joppich@bricknet.de>"]
edition = "2018"

[lib]
name = "infotainer"
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
futures = "0.3"
futures-util = "0.3"
actix = "0.10"
actix-codec = "0.3"
actix-web = "3.0"
actix-web-actors = "3.0"
actix-files = "0.3"
actix-rt = "1.1"
awc = "2.0"
serde = { version="1.0", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version="0.8", features = ["serde", "v4"] }
tokio = "0.2"
failure = "0.1.8"
chrono = { version="0.4", features = ["serde"]}