[package]
name = "infotainer"
version = "0.0.1-alpha.1"
authors = ["joppich <joppich@bricknet.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/joppich/infotainer"
description = "building blocks for simple pubsub services"
readme = "README.md"


[lib]
name = "infotainer"
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3.0"
actix-rt = "1"
env_logger = "0.9"
faccess = "0.2"
failure = "0.1.8"
futures-util = "0.3"
log = "0.4"
uuid = { version="0.8", features = ["serde", "v4"] }
serde = { version="1.0", features = ["derive"] }
serde_cbor = "0.11"

[dev-dependencies]
awc = "2.0"
futures = "0.3"
itertools = "0.10"
