[package]
name = "infotainer"
authors = ["Jorit Kleine-Möllhoff <joppich@bricknet.de>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joppich/infotainer"
readme = "README.md"
description = "a message queue and data pipeline service"
license = "MIT OR APACHE-2"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.10"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"