[package]
name = "chronicle"
version = "0.1.0"
readme = "README.md"
edition = "2021"
description = "infotainers storage component"
license = "MIT OR APACHE-2"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.11"
infotainer-common = { path = "../infotainer-common" }

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"
